--- a/review/.gitignore
+++ b/review/.gitignore
@@ -9,3 +9,8 @@
 /MissingRanges.class
 /WordSearch.class
 /ReplacementAB.class
+/StringProblems.class
+/Test.class
+/ReconstructItinerary.class
+/Combine2BinaryTrees.class
+/MaxSquare.class
