First unique number + one edit distance

--- a/review/.gitignore
+++ b/review/.gitignore
@@ -16,3 +16,8 @@
 /MaxSquare.class
 /RottingOranges.class
 /RottingOranges$Pair.class
+/FirstUniqueNumber.class
+/Test$MyComparator.class
+/Test$MaxComparator.class
+/Test$MinComparator.class
+/OneEditDistance.class
