--- a/review/.gitignore
+++ b/review/.gitignore
@@ -22,3 +22,6 @@
 /Test$MinComparator.class
 /OneEditDistance.class
 /wordLadder.class
+/MeetingRooms.class
+/MeetingRooms$1.class
+/MeetingRooms$2.class
