--- a/review/.gitignore
+++ b/review/.gitignore
@@ -35,3 +35,7 @@
 /PathSum.class
 /PathSum$TreeNode.class
 /PacificAtlanticFlow.class
+/MeetingRooms$4.class
+/MeetingRooms$5.class
+/MeetingRooms$Cell.class
+/ConfusingNumber.class
