Reviewed some basic questions

--- a/review/.gitignore
+++ b/review/.gitignore
@@ -43,3 +43,6 @@
 /TreeNode.class
 /TreeNodeP.class
 /SearchBitonicArray.class
+/DesignLinkedList.class
+/DesignLinkedList$ListNode.class
+/TestLinkedList.class
