--- a/solution/.gitignore
+++ b/solution/.gitignore
@@ -26,3 +26,9 @@
 /SortNumbersInTwoStacks.class
 /Sorting_SelectionAndMerge.class
 /TreeNode.class
+/Power.class
+/TestLinkedList.class
+/QueueBy2Stacks.class
+/Test.class
+/StackWithMin.class
+/DequeBy3Stacks.class
