Compress and decompress string

--- a/stringProblems/.gitignore
+++ b/stringProblems/.gitignore
@@ -3,3 +3,6 @@
 /StringProblemII.class
 /StringProblemsI$1.class
 /StringProblemsI.class
+/Test.class
+/CompressString.class
+/DecompressString.class
