Review some problems

--- a/midterm/.gitignore
+++ b/midterm/.gitignore
@@ -3,3 +3,8 @@
 /TwoNodesDistanceInBST.class
 /TreeNode.class
 /BST.class
+/PrintBlocks.class
+/MinCut.class
+/LeafToLeafMaxPath.class
+/WordBreak.class
+/ReconstructTree.class
