--- a/leetcode/.gitignore
+++ b/leetcode/.gitignore
@@ -4,3 +4,6 @@
 /CarPooling.class
 /CarPooling$MyComparator1.class
 /CarPooling$MyComparator2.class
+/Test.class
+/FurthestBuilding.class
+/FurthestBuilding$Pair.class
