LC word search 2 + 833

--- a/leetcode/.gitignore
+++ b/leetcode/.gitignore
@@ -10,3 +10,9 @@
 /MinRefuelStops.class
 /SlidingWindowMaximum.class
 /GetMaximumGold.class
+/WordSearch2.class
+/WordSearch2$TrieNode.class
+/GetCharArray.class
+/FindReplaceString.class
+/FindReplaceString$1.class
+/FindReplaceString$Pair.class
