LC 452 Overlapping Interval Problem

--- a/leetcode/.gitignore
+++ b/leetcode/.gitignore
@@ -17,3 +17,6 @@
 /FindReplaceString$1.class
 /FindReplaceString$Pair.class
 /PrisonAfterNDays.class
+/FindMinArrowShots.class
+/FindMinArrowShots$MyComparator1.class
+/FindMinArrowShots$MyComparator2.class
