--- a/leetcode/.gitignore
+++ b/leetcode/.gitignore
@@ -20,3 +20,5 @@
 /FindMinArrowShots.class
 /FindMinArrowShots$MyComparator1.class
 /FindMinArrowShots$MyComparator2.class
+/NumIslands.class
+/NumIslands$Pair.class
